<resources>
    <string name="app_name">RugbyFantasyTop14</string>
    <string name="action_sign_in_short">S\'enregistrer</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court : entrez minimum 6 caractères !</string>
    <string name="auth_failed">Authentification a échoué</string>
    <string name="change_email">Changer de mail</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="send_password_reset_email">Envoyer un mail de reinitialisation de mot de passe</string>
    <string name="remove_user">Supprimer utilisateur</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="title_activity_profile">Rugby Fantasy Top14 </string>
    <string name="title_activity_login">S"'"identifier</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">SE CONNECTER</string>
    <string name="btn_link_to_register">Pas encore inscrit ? Enregistre toi avec ton adresse mail maintenant !</string>
    <string name="btn_link_to_login">Déjà enregistré? Authentifie toi !</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">Réinitialiser mot de passe</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Nouvelle adresse mail</string>
    <string name="btn_change">Changer</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Retirer</string>
    <string name="btn_sign_out">Déconnexion</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="forgot_password_msg">Nous avons juste besoin de ton adresse mail pour t\'envoyer un nouveau mot de passe.</string>
    <string name="facebook_app_id">294101641082812</string>
    <string name="fb_login_protocol_scheme">fb294101641082812</string>
    <string name="title_activity_mot_de_passe_oublie">MotDePasseOublieActivity</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">294101641082812</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="enregistrer_adresse_mail">Entrez une adresse mail valide et un mot de passe !</string>

    <string-array name="nombre_de_joueur">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
